--- a/shop/src/app/Pages/auth-page/auth-page.component.html
+++ b/shop/src/app/Pages/auth-page/auth-page.component.html
@@ -1,5 +1,5 @@
 <section class="auth section first-slide center">
-    <div class="auth__wrap wrap-md-pd center w-100" *ngIf="!user.is_auth">
+    <div class="auth__wrap wrap-md-pd center w-100" *ngIf="!userService.is_auth">
         <div class="center w-100">
             <div class="d-flex center flex-column w-100">
                 <div class="auth__form shadow">
@@ -20,7 +20,7 @@
             </div>
         </div>
     </div>
-    <div class="center" *ngIf="user.is_auth">
+    <div class="center" *ngIf="userService.is_auth">
         <mat-spinner color="accent"></mat-spinner>
     </div>
 </section>
