--- a/shop/src/app/Layouts/grid-layout/GridLayout.component.scss
+++ b/shop/src/app/Layouts/grid-layout/GridLayout.component.scss
@@ -3,7 +3,7 @@
 .grid-layout__items{
   display:grid;
   grid-auto-rows: auto;
-  grid-gap: $margin/2;
+  grid-gap: $margin;
   justify-content: center;
   align-items: center;
   align-content: center;
