feat: add Docker file

--- a/shop/src/_variables.scss
+++ b/shop/src/_variables.scss
@@ -2,5 +2,6 @@ $margin:1.4rem;
 $light-color: #f8f7f7;
 $dark-color:#414042;
 $gray-color: #f5eaea;
+$dark-gray-color: #aba9a9;
 $media: 1100px;
 $max-width: 1350px;
