--- a/shop/src/app/Pages/products/products.component.html
+++ b/shop/src/app/Pages/products/products.component.html
@@ -1,5 +1,5 @@
 <app-section-layout title="Our goods" [hasBreadCrumbs]="true" cssClass="products">
-  <div class="section__products-bread-crumps" breadCrumbs>
+  <div class="section__products-bread-crumps mb-2" breadCrumbs>
     <app-breadcrumbs [urls]="urls"></app-breadcrumbs>
   </div>
   <div class="section__product-items">
