feat: add categories end points

--- a/shop/src/_variables.scss
+++ b/shop/src/_variables.scss
@@ -1,6 +1,8 @@
-$margin:1.4rem;
+$margin: 1.4rem;
 $light-color: #f8f7f7;
-$dark-color:#414042;
+$dark-color: #414042;
+$sl-light: #647590;
+$drk-light: #405263;
 $gray-color: #f5eaea;
 $dark-gray-color: #aba9a9;
 $media: 1100px;
