--- a/shop/src/app/Components/header/header.component.html
+++ b/shop/src/app/Components/header/header.component.html
@@ -1,24 +1,20 @@
-<header class="header header-notmedia shadow bg-warn text-white bg-dark">
+<header class="header header-notmedia shadow">
   <div class="header__wrap wrap-md">
     <div class="header__content">
       <app-logo></app-logo>
       <ul class="header__links justify-content-end">
-        <li class="header__link header__search center flex-column position-relative" on-click="showSearch()">
-          <button mat-mini-fab color="accent" class="search__icon">
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor"
-                 xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd"
-                    d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-              <path fill-rule="evenodd"
-                    d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-            </svg>
-          </button>
-        </li>
-        <li class="header__link menu">
-          <button mat-icon-button color="accent" (click)="openSideBar()">
-            <mat-icon>menu</mat-icon>
-          </button>
-        </li>
+        <mat-selection-list [multiple]="false" class="header__list center flex-row">
+          <mat-list-option mat-list-item class="center">
+            <a routerLink="/" class="text-white">
+              Home
+            </a>
+          </mat-list-option>
+          <mat-list-option mat-list-item class="center">
+            <a routerLink="/contacts" class="text-white">
+              Contacts
+            </a>
+          </mat-list-option>
+        </mat-selection-list>
       </ul>
     </div>
   </div>
