--- a/shop/src/app/Components/header/header.component.scss
+++ b/shop/src/app/Components/header/header.component.scss
@@ -1,118 +1,121 @@
 @import "src/variables";
 
 .avatar .avatar__btn {
-    max-width: 50px;
-    height: 40px;
-    border: none;
-    border-radius: 50%;
-    overflow: hidden;
-    outline: none;
+  max-width: 50px;
+  height: 40px;
+  border: none;
+  border-radius: 50%;
+  overflow: hidden;
+  outline: none;
 
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .avatar {
-    position: relative;
-    min-width: 180px;
+  position: relative;
+  min-width: 180px;
 
-    .avatar__orders {
-        position: absolute;
-        transform: scale(0.7);
-        bottom: -14px;
-        right: -17px;
-        font-size: 20px;
-        outline: none;
-    }
+  .avatar__orders {
+    position: absolute;
+    transform: scale(0.7);
+    bottom: -14px;
+    right: -17px;
+    font-size: 20px;
+    outline: none;
+  }
 }
 
 .header__links li {
-    min-width: 70px;
+  min-width: 70px;
 }
 
 .avatar__icon {
-    position: relative;
-    z-index: 7;
+  position: relative;
+  z-index: 7;
 }
 
 .avatar__popup {
-    position: absolute;
-    top: 35px;
+  position: absolute;
+  top: 35px;
 }
 
 .search__icon {
-    transform: scale(1.2);
-    position: absolute;
-    right: 20px;
+  transform: scale(1.2);
+  position: absolute;
+  right: 20px;
 }
 
 .avatar__popup mat-list-item {
-    margin: 5px 0;
+  margin: 5px 0;
 }
 
 .header__links {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .header-media {
-    display: none !important;
+  display: none !important;
 }
 
 .header__content {
-    padding: 20px 0 !important;
+  padding: 20px 0 !important;
 }
 
+.header__links ::ng-deep a {
+  color: white !important;
+}
 
 @media (max-width: $media) {
-    .header-media .header__content {
-        flex-direction: column !important;
+  .header-media .header__content {
+    flex-direction: column !important;
+  }
+
+  .header-media .header__links {
+    flex-direction: column;
+    margin-left: 0;
+    width: 100%;
+    padding-left: 0;
+    min-height: 93vh;
+    justify-content: flex-start;
+    padding-top: 4rem;
+
+    li {
+      padding: 1.7rem;
+      width: 100%;
+      margin: 0;
+
+      > a,
+      > button:not(.search__icon) {
+        transform: scale(1.5) !important;
+        width: 70%;
+      }
     }
+  }
 
-    .header-media .header__links {
-        flex-direction: column;
-        margin-left: 0;
-        width: 100%;
-        padding-left: 0;
-        min-height: 93vh;
-        justify-content: flex-start;
-        padding-top: 4rem;
+  .avatar-media {
+    position: absolute;
+    left: 0;
+    top: 1rem;
+  }
 
-        li {
-            padding: 1.7rem;
-            width: 100%;
-            margin: 0;
+  .header-media #menu_icon {
+    position: absolute;
+    display: block !important;
+    right: 0;
+    cursor: pointer;
+    top: 1rem;
+  }
 
-            >a,
-            >button:not(.search__icon) {
-                transform: scale(1.5) !important;
-                width: 70%;
-            }
-        }
-    }
+  .header-media .header__search span {
+    font-size: 17px;
+    font-weight: 300;
+  }
 
-    .avatar-media {
-        position: absolute;
-        left: 0;
-        top: 1rem;
-    }
-
-    .header-media #menu_icon {
-        position: absolute;
-        display: block !important;
-        right: 0;
-        cursor: pointer;
-        top: 1rem;
-    }
-
-    .header-media .header__search span {
-        font-size: 17px;
-        font-weight: 300;
-    }
-
-    .search__icon {
-        display: none !important;
-    }
+  .search__icon {
+    display: none !important;
+  }
 }
