--- a/shop/src/app/Components/logo/logo.component.html
+++ b/shop/src/app/Components/logo/logo.component.html
@@ -1,8 +1,7 @@
 <div class="header__brand-name">
   <a routerLink="/">
     <h5>
-      <span>IN</span>
-      <span>Digital</span>
+      <strong class="dark-text">IN</strong>&nbsp;<span>Digital</span>
     </h5>
   </a>
 </div>
