--- a/shop/src/styles.scss
+++ b/shop/src/styles.scss
@@ -2,13 +2,15 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 @import './scrollbar.scss';
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 
 * {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 html, body {
   height: 100%;
+  background-color: white;
 }
 
 body {
@@ -36,7 +38,7 @@ body {
 }
 
 .section__image {
-  max-height:600px;
+  max-height: 600px;
   object-fit: cover;
 }
 
@@ -48,6 +50,16 @@ body {
   width: 14px;
   height: 100%;
   background-color: #f3f3ea;
+}
+
+.header__list {
+  display: grid !important;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-rows: 1fr;
+
+  .mat-list-option {
+    grid-row: 1/2;
+  }
 }
 
 .slider__btn-container button {
@@ -273,7 +285,7 @@ a {
 
 .section__content {
   width: 100%;
-  max-width:100%;
+  max-width: 100%;
   padding: $margin;
 }
 
@@ -431,6 +443,7 @@ p.h6 {
   width: 100%;
   color: white;
   z-index: 9999999;
+  background-color: #405263;
 }
 
 .header__brand-name h1 {
@@ -465,6 +478,9 @@ p.h6 {
   color: inherit !important;
 }
 
+.header-top {
+  background-color: $sl-light !important;
+}
 
 .bg-dgray {
   background-color: #191919;
